fix problem link and scrollbar

--- a/src/assets/css/post.module.css
+++ b/src/assets/css/post.module.css
@@ -74,5 +74,7 @@
     font-size:  3.5rem;
   }
 
-
+  .conteudo_post p{
+    font-size:  2.5rem;
+  }
 
